* Added ExternalEvent "sessionMap" and "applicationMap" property for accessing session and application scoped 
  variables associated with a source event.
* Added model support for "state result events", where the parameters of events that drive a state transition can be
  accessed from views by referencing in the format: ${stateId.parameterName}
* Added "requireValidatorMethod" property to FormAction, useful for piecemeal validation as part of a wizard flow
* Added ActionUtils utility class, useful when implementing actions.
* Added support for webflow definition scoped bean definitions, centralizing all flow definition code in one place.
* Added AbstractFlowBuilder addDecisionState(...) methods for completeness.
* Added a convenience constructor to the Event class that takes a single parameter name/value. Mainly for use in unit tests.
* Added StatefulActionProxy, an action that delegates to a stateful action managed in flow scope.
* Added BeanFactoryBeanInvokingAction, an action that can invoke any instance method on any bean managed by the Spring bean factory.
* Added LocalBeanInvokingAction, an action that can invoke any instance method on any bean.
* Added support for invoking strongly typed action execution methods on arbitrary beans:
  e.g execute(String arg1, int arg2), for use in combination with a "bean invoking action" as an alternative to
  implementing the 'execute(RequestContext context)' Action interface.  See the Phonebook sample app for an example.
* Added convenience methods for retrieving action execution properties to the AbstractAction class.
* Refactored out DataSourceAccessor strategy interface from FlowExecutionStorage implementations - this change resulted in
  some minor package moves and class renames in the webflow.execution package.
* Improved use of the DataStoreTransactionSynchronizer, for working with transaction tokens managed in an external store.